--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
     "tslog": "^3.3.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
+    "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-typescript": "^1.1.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.2"
   }
 }
