--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "start": "node dist/main.js",
     "build": "tsc",
     "dev": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "generate": "prisma generate"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.6.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.5.1",
@@ -39,6 +41,7 @@
     "eslint-typescript": "^1.1.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
+    "prisma": "^3.6.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
