--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "husky": "^7.0.4",
     "inversify": "^6.0.1",
+    "jsonwebtoken": "^8.5.1",
     "lint-staged": "^12.1.2",
     "reflect-metadata": "^0.1.13",
     "tslog": "^3.3.0"
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.6",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "eslint": "^7.32.0",
