--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^12.1.2",
     "reflect-metadata": "^0.1.13",
+    "ts-jest": "^27.1.1",
     "tslog": "^3.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
@@ -41,6 +43,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-typescript": "^1.1.0",
+    "jest": "^27.4.3",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "prisma": "^3.6.0",
